# player

./: .clang-format  .gitignore  README.md  default.nix  sdl3.nix
src/: CMakeLists.txt  gst_utils.cc  gst_utils.h  pipeline.cc  pipeline.h  player.cc  player2.cc  sdl_utils.cc  sdl_utils.h  utils.h
